fixed issue with login/logout dropdowns being misaligned on the right side

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -15,7 +15,6 @@ a.nav-link {
 }
 
 #login-dropdown {
-    left: -80px;
     padding-left: 10px;
     padding-right: 10px;
 }
